# tinyml_esp32

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  app_config.h  audio_i2s.c  audio_i2s.h  constants.h  gc9a01_lvgl_display.c  gc9a01_lvgl_display.h  idf_component.yml  main.c  main_functions.cc  main_functions.h  mfcc.c  mfcc.h  model.cc  model.h  output_handler.cc  output_handler.h  print_code.py  server.py  wifi_upload.c  wifi_upload.h
tools/: model.h  print_ops.py  server.py  speech_commands_mfcc.tflite
training/: tinyml_speech_training_pipeline.ipynb
